--- a/cc_connect/templates/shared/footer.html
+++ b/cc_connect/templates/shared/footer.html
@@ -10,6 +10,7 @@
             <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             <a  class="about-us-icon" title="About Us"><i class="fas fa-info-circle"></i></a>
+            <br><a href="{% url 'privacy_policy' %}" target="_blank" style="color: #007BFF; font-size: 16px;">Privacy Policy</a>
         </div>
         
     </div>
