Added footer to map, search, and message board

--- a/cc_connect/businesses/templates/businesses/map.html
+++ b/cc_connect/businesses/templates/businesses/map.html
@@ -176,6 +176,7 @@
         document.getElementById("profileModal").style.display = "none";
     }
 </script>
+{% include 'shared/footer.html' %}
 </body>
 </html>
 
